cow images added

--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@ background: linear-gradient(180deg, rgba(118,133,212,1) 0%, rgba(137,196,183,1) 
 .carousel-img{
     height: 500px;
 }
+
+.cow-img{
+    height: 250px;
+}
+
