--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+/* header part */
+
+.nav-bg{
+    background: rgb(159, 170, 226);
+}
 .carousel-bg{
     background: rgb(118,133,212);
 background: linear-gradient(180deg, rgba(118,133,212,1) 0%, rgba(137,196,183,1) 35%, rgba(83,195,102,1) 100%);
@@ -7,7 +13,60 @@ background: linear-gradient(180deg, rgba(118,133,212,1) 0%, rgba(137,196,183,1) 
     height: 500px;
 }
 
-.cow-img{
-    height: 250px;
+/* main part */
+
+/* cows-items part */
+.cows-bg{
+    background: rgb(203,203,203);
+    background: radial-gradient(circle, rgba(203,203,203,1) 0%, rgba(240,244,243,1) 65%, rgba(203,203,203,1) 100%);
 }
 
+.cow-img{
+    height: 250px;
+    padding: 40px;
+}
+
+/* hovereffect into card */
+
+.hovereffect {
+    width: 95%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
+    background: rgb(250,250,251);
+background: linear-gradient(180deg, rgba(250,250,251,1) 0%, rgba(156,207,195,1) 65%, rgba(203,203,203,1) 100%);
+}
+
+.hovereffect img {
+    display: block;
+    position: relative;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+}
+
+.hovereffect:hover img {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+.hovereffect>div> h5 {
+    text-transform: uppercase;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: rgba(232, 230, 235, 0.6);
+}
+
+.hovereffect>div> p {
+    padding: 5px;
+    margin-top: 20px;
+    background-color: transparent;
+} 
+
+.hovereffect>div>p:hover {
+    box-shadow: 5px 5px 20px gray;
+}
