--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ background: linear-gradient(180deg, rgba(118,133,212,1) 0%, rgba(137,196,183,1) 
 /* main part */
 
 /* cows-items part */
-.cows-bg{
+.cows-bg, .footer-bg, .payment-bg{
     background: rgb(203,203,203);
     background: radial-gradient(circle, rgba(203,203,203,1) 0%, rgba(240,244,243,1) 65%, rgba(203,203,203,1) 100%);
 }
