--- a/style.css
+++ b/style.css
@@ -71,3 +71,4 @@ background: linear-gradient(180deg, rgba(250,250,251,1) 0%, rgba(156,207,195,1) 
     box-shadow: 5px 5px 20px gray;
 }
 
+/* hovereffect end */
